--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -6,6 +6,8 @@
 
 html,
 body {
-  overflow: hidden;
+  /* overflow: hidden; */
+  -ms-overflow-style: none;
+  scrollbar-width: none;
   -webkit-font-smoothing: antialiased;
 }
