--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -8,6 +8,6 @@ html,
 body {
   /* overflow: hidden; */
   -ms-overflow-style: none;
-  scrollbar-width: none;
+  /* scrollbar-width: none; */
   -webkit-font-smoothing: antialiased;
 }
